--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Selector</title>
+    <style>
+        p{
+            color: rgb(67, 124, 2);
+            font-size: medium;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <p>Esto es un parrafo con estilo aplicado usando un selector de elementos</p>
+</body>
+</html>
