--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
         p {
             color: rgb(67, 124, 2);
             font-size: medium;
-            text-align: center;
+            text-align: justify;
         }
     </style>
 </head>
