--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selector</title>
     <style>
-        p {
-            color: rgb (67, 124, 2);
+        p {color: rgb (67, 124, 2);
             font-size: medium;
-            text-align: justify;
-        }
+            text-align: justify; }
     </style>
 </head>
 <body>
