--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selector</title>
+    <title>Lboratorio9</title>
+    <header>
+        <h1>Mi pagina web</h1>
+        </header>
+        <nav>
+            <a href="#"> Inicio</a>
+            <a href="#">Acerca de</a>
+            <a href="#">productos</a>
+            <a href="#">contacto</a>
+
+        </nav>
+        <main>
+            <div>
+                <h2> Bienvenidos !!!</h2>
+                <p>Este es un ejemplo de como aplicar estilos a textos y contenedores</p>
+            </div>
+        </main>
     <style>
+        <div>
+            
         p {
             color: rgb (67, 124, 2);
             font-size: medium;
